fix: list item alignment in telegram renderer

--- a/frontend/src/routes/components/renderer/css/telegram-new-renderer.css
+++ b/frontend/src/routes/components/renderer/css/telegram-new-renderer.css
@@ -209,3 +209,7 @@
   border-radius: 50%;
   padding: .25rem;
 }
+
+.telegram-message li {
+  list-style-position: inside;
+}
